добавлены некоторые правки